// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContextualAlert > should render : 'comment' > expected html 1`] = `
<div>
  <div
    class="relative pl-4 sm:pl-6 bg-sky-50 cmnt-test-css"
  >
    <div
      class="absolute top-3 left-1.5 pt-1 sm:left-3.5 bg-sky-50"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-comment-dots h-6 w-6 text-sky-800"
        data-icon="comment-dots"
        data-prefix="far"
        data-testid="comment"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M0 240c0 54.4 19.3 104.6 51.9 144.9L3.1 474.3c-2 3.7-3.1 7.9-3.1 12.2 0 14.1 11.4 25.5 25.5 25.5 4 0 7.8-.6 11.5-2.1L153.4 460c31.4 12.9 66.1 20 102.6 20 141.4 0 256-107.5 256-240S397.4 0 256 0 0 107.5 0 240zM94 407.9c9.3-17.1 7.4-38.1-4.8-53.2-26.1-32.3-41.2-71.9-41.2-114.7 0-103.2 90.2-192 208-192s208 88.8 208 192-90.2 192-208 192c-30.2 0-58.7-5.9-84.3-16.4-11.9-4.9-25.3-4.8-37.1 .3L76 440.9 94 407.9zM144 272a32 32 0 1 0 0-64 32 32 0 1 0 0 64zm144-32a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zm80 32a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="overflow-auto border-l-4 pt-4 pb-2.5 pl-6 border-l-sky-800"
    >
      <div>
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`ContextualAlert > should render : 'danger' > expected html 1`] = `
<div>
  <div
    class="relative pl-4 sm:pl-6 bg-white dang-test-css"
  >
    <div
      class="absolute top-3 left-1.5 pt-1 sm:left-3.5 bg-white"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-circle-exclamation h-6 w-6 text-red-700"
        data-icon="circle-exclamation"
        data-prefix="fas"
        data-testid="danger"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zm0-192a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm0-192c-18.2 0-32.7 15.5-31.4 33.7l7.4 104c.9 12.6 11.4 22.3 23.9 22.3 12.6 0 23-9.7 23.9-22.3l7.4-104c1.3-18.2-13.1-33.7-31.4-33.7z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="overflow-auto border-l-4 pt-4 pb-2.5 pl-6 border-l-red-700"
    >
      <div>
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`ContextualAlert > should render : 'foo' > expected html 1`] = `
<div>
  <div
    class="relative pl-4 sm:pl-6 bg-white foo-test-css"
  >
    <div
      class="absolute top-3 left-1.5 pt-1 sm:left-3.5 bg-white"
    />
    <div
      class="overflow-auto border-l-4 pt-4 pb-2.5 pl-6 border-l-gray-700"
    >
      <div>
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`ContextualAlert > should render : 'info' > expected html 1`] = `
<div>
  <div
    class="relative pl-4 sm:pl-6 bg-white info-test-css"
  >
    <div
      class="absolute top-3 left-1.5 pt-1 sm:left-3.5 bg-white"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-circle-info h-6 w-6 text-cyan-700"
        data-icon="circle-info"
        data-prefix="fas"
        data-testid="info"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="overflow-auto border-l-4 pt-4 pb-2.5 pl-6 border-l-cyan-700"
    >
      <div>
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`ContextualAlert > should render : 'success' > expected html 1`] = `
<div>
  <div
    class="relative pl-4 sm:pl-6 bg-white succ-test-css"
  >
    <div
      class="absolute top-3 left-1.5 pt-1 sm:left-3.5 bg-white"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-circle-check h-6 w-6 text-green-700"
        data-icon="circle-check"
        data-prefix="fas"
        data-testid="success"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="overflow-auto border-l-4 pt-4 pb-2.5 pl-6 border-l-green-700"
    >
      <div>
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`ContextualAlert > should render : 'warning' > expected html 1`] = `
<div>
  <div
    class="relative pl-4 sm:pl-6 bg-white warn-test-css"
  >
    <div
      class="absolute top-3 left-1.5 pt-1 sm:left-3.5 bg-white"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-triangle-exclamation h-6 w-6 text-amber-700"
        data-icon="triangle-exclamation"
        data-prefix="fas"
        data-testid="warning"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.2-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 352a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm0-192c-18.2 0-32.7 15.5-31.4 33.7l7.4 104c.9 12.5 11.4 22.3 23.9 22.3 12.6 0 23-9.7 23.9-22.3l7.4-104c1.3-18.2-13.1-33.7-31.4-33.7z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="overflow-auto border-l-4 pt-4 pb-2.5 pl-6 border-l-amber-700"
    >
      <div>
        test
      </div>
    </div>
  </div>
</div>
`;
